--- a/Logistic_Regression_Part2.ipynb
+++ b/Logistic_Regression_Part2.ipynb
@@ -32,40 +32,15 @@
         "library(dplyr)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "x3AcXS03DQ4k",
-        "outputId": "3241e2af-6b99-4513-cfa9-840dd5fd070e",
         "collapsed": true
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n",
-            "Attaching package: ‘dplyr’\n",
-            "\n",
-            "\n",
-            "The following objects are masked from ‘package:stats’:\n",
-            "\n",
-            "    filter, lag\n",
-            "\n",
-            "\n",
-            "The following objects are masked from ‘package:base’:\n",
-            "\n",
-            "    intersect, setdiff, setequal, union\n",
-            "\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "ljSPISOFBhSM"
       },
@@ -87,9 +62,9 @@
           "height": 304
         },
         "id": "9oVf_pdQCpVW",
-        "outputId": "c991c326-12dc-428f-f1ce-dd807c83678c"
+        "outputId": "5a862600-d646-4e66-93b0-5f96ab8b123c"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -188,7 +163,8 @@
         "  ggplot() +\n",
         "  aes( x = GPA, col = Accept) +\n",
         "  geom_density() +\n",
-        "  xlim(c(2.4,4.1))"
+        "  xlim(c(2.4,4.1))+\n",
+        "  labs(Title = \"Accepted vs Denied Grad School\")"
       ],
       "metadata": {
         "colab": {
@@ -196,9 +172,9 @@
           "height": 437
         },
         "id": "iZOFI8qlC14Y",
-        "outputId": "f0013ce4-0112-4a5b-b528-ea42e0d73738"
+        "outputId": "a5154351-a95f-4dac-f166-911507b01696"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -245,7 +221,7 @@
           "height": 437
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -290,7 +266,7 @@
           "height": 437
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -328,8 +304,7 @@
         "mydata %>%\n",
         "  ggplot()+\n",
         "    aes(x=GPA, y = MCAT, col = Accept)+\n",
-        "    geom_point()\n",
-        ""
+        "    geom_point()\n"
       ],
       "metadata": {
         "id": "mKGca8rBLpFc",
@@ -339,7 +314,7 @@
           "height": 437
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -361,43 +336,71 @@
     {
       "cell_type": "code",
       "source": [
+        "# prompt: filter for mcat >20, and grouping by Sex and Accept find the correlations between gpa and mcat\n",
+        "\n",
+        "mydata %>%\n",
+        "  filter(MCAT > 20) %>%\n",
+        "  group_by(Sex, Accept) %>%\n",
+        "  summarize(correlation = cor(GPA, MCAT))"
+      ],
+      "metadata": {
+        "id": "Tsik_k6R3Y8l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "mydata %>%\n",
         "  filter(MCAT >20)%>%\n",
-        "    group_by(Sex) %>%\n",
+        "    group_by(Sex, Accept) %>%\n",
         "    summarize(cor(GPA, MCAT))\n"
       ],
       "metadata": {
         "id": "SUC_NaJpPpth",
-        "outputId": "1e65a94b-0099-47fb-ada9-052174cf8f5a",
+        "outputId": "433c68ad-8c31-46d9-cf46-4b6f4c52723c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 161
+          "height": 259
         }
       },
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[1m\u001b[22m`summarise()` has grouped output by 'Sex'. You can override using the `.groups`\n",
+            "argument.\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<table class=\"dataframe\">\n",
-              "<caption>A tibble: 2 × 2</caption>\n",
+              "<caption>A grouped_df: 4 × 3</caption>\n",
               "<thead>\n",
-              "\t<tr><th scope=col>Sex</th><th scope=col>cor(GPA, MCAT)</th></tr>\n",
-              "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+              "\t<tr><th scope=col>Sex</th><th scope=col>Accept</th><th scope=col>cor(GPA, MCAT)</th></tr>\n",
+              "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><td>F</td><td>0.5097200</td></tr>\n",
-              "\t<tr><td>M</td><td>0.4008728</td></tr>\n",
+              "\t<tr><td>F</td><td>A</td><td> 0.48635917</td></tr>\n",
+              "\t<tr><td>F</td><td>D</td><td> 0.28777837</td></tr>\n",
+              "\t<tr><td>M</td><td>A</td><td> 0.42357766</td></tr>\n",
+              "\t<tr><td>M</td><td>D</td><td>-0.02488852</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA tibble: 2 × 2\n\n| Sex &lt;fct&gt; | cor(GPA, MCAT) &lt;dbl&gt; |\n|---|---|\n| F | 0.5097200 |\n| M | 0.4008728 |\n\n",
-            "text/latex": "A tibble: 2 × 2\n\\begin{tabular}{ll}\n Sex & cor(GPA, MCAT)\\\\\n <fct> & <dbl>\\\\\n\\hline\n\t F & 0.5097200\\\\\n\t M & 0.4008728\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA grouped_df: 4 × 3\n\n| Sex &lt;fct&gt; | Accept &lt;fct&gt; | cor(GPA, MCAT) &lt;dbl&gt; |\n|---|---|---|\n| F | A |  0.48635917 |\n| F | D |  0.28777837 |\n| M | A |  0.42357766 |\n| M | D | -0.02488852 |\n\n",
+            "text/latex": "A grouped\\_df: 4 × 3\n\\begin{tabular}{lll}\n Sex & Accept & cor(GPA, MCAT)\\\\\n <fct> & <fct> & <dbl>\\\\\n\\hline\n\t F & A &  0.48635917\\\\\n\t F & D &  0.28777837\\\\\n\t M & A &  0.42357766\\\\\n\t M & D & -0.02488852\\\\\n\\end{tabular}\n",
             "text/plain": [
-              "  Sex cor(GPA, MCAT)\n",
-              "1 F   0.5097200     \n",
-              "2 M   0.4008728     "
+              "  Sex Accept cor(GPA, MCAT)\n",
+              "1 F   A       0.48635917   \n",
+              "2 F   D       0.28777837   \n",
+              "3 M   A       0.42357766   \n",
+              "4 M   D      -0.02488852   "
             ]
           },
           "metadata": {}
@@ -427,7 +430,7 @@
           "height": 437
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -488,7 +491,7 @@
           "height": 455
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,6 +519,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "U_nnQUnfG6ZB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "jnqivtnYG50m"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "Q7: Is the probability of acceptance based on GPA is similar(or different) for males and females?"
       ],
@@ -526,31 +543,18 @@
     {
       "cell_type": "code",
       "source": [
-        "model2 <- glm(Accept_code ~ GPA + Sex + GPA*Sex)\n",
-        "\n",
-        "model2 <- glm(Accept_code ~ GPA + Sex) ## have to pick one of these two !!"
-      ],
-      "metadata": {
-        "id": "aTuSayCXRhhz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model1 <- glm(Accept_code ~ GPA, family = \"binomial\", data = mydata)\n",
+        "model1 <- glm(Accept_code ~ GPA*Sex, family = \"binomial\", data = mydata)\n",
         "summary(model1)"
       ],
       "metadata": {
         "id": "oE4EsYtWSKcd",
-        "outputId": "1b20b0f5-bfbf-4288-928e-504916f59b75",
+        "outputId": "b04322ce-f71c-4239-9825-5d17fbec3a21",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 374
         }
       },
-      "execution_count": 30,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -558,22 +562,24 @@
             "text/plain": [
               "\n",
               "Call:\n",
-              "glm(formula = Accept_code ~ GPA, family = \"binomial\", data = mydata)\n",
+              "glm(formula = Accept_code ~ GPA * Sex, family = \"binomial\", data = mydata)\n",
               "\n",
               "Coefficients:\n",
-              "            Estimate Std. Error z value Pr(>|z|)    \n",
-              "(Intercept)  -19.207      5.629  -3.412 0.000644 ***\n",
-              "GPA            5.454      1.579   3.454 0.000553 ***\n",
+              "            Estimate Std. Error z value Pr(>|z|)  \n",
+              "(Intercept)  -24.385     10.082  -2.419   0.0156 *\n",
+              "GPA            7.083      2.891   2.450   0.0143 *\n",
+              "SexM           4.901     13.156   0.373   0.7095  \n",
+              "GPA:SexM      -1.709      3.709  -0.461   0.6450  \n",
               "---\n",
               "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
               "\n",
               "(Dispersion parameter for binomial family taken to be 1)\n",
               "\n",
               "    Null deviance: 75.791  on 54  degrees of freedom\n",
-              "Residual deviance: 56.839  on 53  degrees of freedom\n",
-              "AIC: 60.839\n",
+              "Residual deviance: 53.729  on 51  degrees of freedom\n",
+              "AIC: 61.729\n",
               "\n",
-              "Number of Fisher Scoring iterations: 4\n"
+              "Number of Fisher Scoring iterations: 5\n"
             ]
           },
           "metadata": {}
@@ -588,6 +594,51 @@
       "metadata": {
         "id": "2aG7buySOaGo"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model2 <- glm(Accept_code ~ GPA + Sex, family = \"binomial\", data = mydata)\n",
+        "summary(model2)"
+      ],
+      "metadata": {
+        "id": "UM3a3_3IFPO0",
+        "outputId": "2697cdf2-9cd3-49d0-8b15-3b0601276001",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\n",
+              "Call:\n",
+              "glm(formula = Accept_code ~ GPA + Sex, family = \"binomial\", data = mydata)\n",
+              "\n",
+              "Coefficients:\n",
+              "            Estimate Std. Error z value Pr(>|z|)    \n",
+              "(Intercept) -21.0680     6.4025  -3.291 0.001000 ***\n",
+              "GPA           6.1324     1.8283   3.354 0.000796 ***\n",
+              "SexM         -1.1697     0.7178  -1.629 0.103210    \n",
+              "---\n",
+              "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+              "\n",
+              "(Dispersion parameter for binomial family taken to be 1)\n",
+              "\n",
+              "    Null deviance: 75.791  on 54  degrees of freedom\n",
+              "Residual deviance: 53.945  on 52  degrees of freedom\n",
+              "AIC: 59.945\n",
+              "\n",
+              "Number of Fisher Scoring iterations: 5\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
